[tool.poetry]
name = "Dark Princess"
version = "0.0.1"
description = "A game"
authors = ["Jaehak Lee <leejaehak87@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
sqlalchemy = "^2.0.41"
uvicorn = "^0.34.3"
fastapi = "^0.115.14"
dotenv = "^0.9.9"
aiosqlite = "^0.21.0"
python-multipart = "^0.0.20"
python-dotenv = "^1.1.1"
pydantic-settings = "^2.10.1"
pydantic = "^2.12.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
