[tool.poetry]
name = "Dark Princess"
version = "0.0.1"
description = "A game"
authors = ["Jaehak Lee <leejaehak87@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
sqlalchemy = "^2.0.41"
uvicorn = "^0.34.3"
fastapi = "^0.115.14"
dotenv = "^0.9.9"
aiosqlite = "^0.21.0"
python-multipart = "^0.0.20"
python-dotenv = "^1.1.1"
pydantic-settings = "^2.10.1"
pydantic = "^2.12.5"
torch = { version = "2.7.0+cu128", source = "pytorch-gpu" }
torchvision = { version = "0.22.0+cu128", source = "pytorch-gpu" }
diffusers = "^0.35.1"
timm = "^1.0.22"
sentence-transformers = "^5.1.0"
llama-cpp-python = { version = "^0.3.28", source = "llama-cpp-python-cpu" }
accelerate = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[[tool.poetry.source]]
name = "llama-cpp-python-cpu"
url = "https://abetlen.github.io/llama-cpp-python/whl/cpu"
priority = "explicit"
